--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Bits Assignment for Devops by Arjun M -</title>
+    <title>Bits Assignment for Devops by Paritosh Parmar -</title>
   </head>
   <body>
-    <p>Making some changes to the Code and Doing Jenkins Build</p>
+    <p>Deploying App</p>
   </body>
 </html>
