--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Bits Assignment for Devops by Paritosh Parmar -</title>
   </head>
   <body>
-    <p>Deploying App</p>
+    <p>Pipelines stages docker</p>
   </body>
 </html>
