--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Bits Assignment for Devops by Paritosh Parmar -</title>
+    <title>Bits Devops Assignment by Paritosh Parmar -</title>
   </head>
   <body>
     <p>Pipelines stages docker</p>
