CHanges in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Bits Devops Assignment by Paritosh Parmar -</title>
   </head>
   <body>
-    <p>Pipelines stages docker</p>
+    <p> Making some changes in code </p>
   </body>
 </html>
